[package]
name = "date-diff"
version = "0.4.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
jiff = { version = "0.2.0", features = ["js"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.138"
tsify = { version = "0.5.5", features = ["js"] }
wasm-bindgen = "0.2.100"
